feature/booking: add the skeleton of booking module

--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -36,6 +36,7 @@
   "account": "User Profiles",
   "perms": "Authorizations",
   "users": "Users",
+  "bookings": "Bookings",
   "listings": "Listings",
   "businesses": "Businesses",
   "upload": "Upload to CDN"
