--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -35,6 +35,7 @@
   },
   "account": "Kullanıcı Profilleri",
   "perms": "Yetkilendirmeler",
+  "bookings": "Rezervasyonlar",
   "users": "Kullanıcılar",
   "listings": "İlanlar",
   "businesses": "İşletmeler",
