feature/help-upload: fix

--- a/public/locales/en/upload.json
+++ b/public/locales/en/upload.json
@@ -21,7 +21,8 @@
     "title": "Choose which folder the image will be in",
     "options": {
       "places": "Places App",
-      "categories": "Categories Application"
+      "categories": "Categories Application",
+      "help": "Help App"
     }
   }
 }
