--- a/public/locales/tr/listing.json
+++ b/public/locales/tr/listing.json
@@ -113,7 +113,9 @@
           "heating": {
             "air-conditioning": "Klima ile",
             "stove": "Soba ile",
-            "gas": "Doğalgaz ile"
+            "gas": "Doğalgaz ile",
+            "floor": "Yerden ısıtma ile",
+            "fireplace": "Şömine ile"
           }
     },
     "yes": "Evet",
